# Message-Encoder-Decoder

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Message-Encoder-Decoder.rc  Message-Encoder-Decoder.sln  Message-Encoder-Decoder.vcxproj  Message-Encoder-Decoder.vcxproj.filters  README.md  message-encoder-decoder.code-workspace
Application/: CMakeLists.txt
Application/Include/: menu.h  resource.h
Application/Source/: CMakeLists.txt  Message-Encoder-Decoder.cpp  menu.cpp
Builds/: common.sh
Builds/Docker/database/: common.sh
Builds/Docker/database/mariadb/: Dockerfile  build.sh  common.sh
Client/Messenger/messenger-client/: .editorconfig  .eslintrc.js  .eslintrc.json  package.json  vite.config.ts
Client/Messenger/messenger-client/pages/: index.tsx
Client/Messenger/messenger-client/pages/conversations/: [conversationId].tsx
Client/Messenger/messenger-client/src/: App.tsx
Client/Native/: CMakeLists.txt  CMakeSettings.json  Message-Encoder-Decoder.aps  Message-Encoder-Decoder.rc  Message-Encoder-Decoder.sln  Message-Encoder-Decoder.vcxproj  Message-Encoder-Decoder.vcxproj.filters
Client/Native/Application/: CMakeLists.txt
Client/Native/Application/Include/: consolemanager.hpp  filemanager.hpp  iomanager.hpp  iosymbol.hpp  menu.hpp  resource.h  statemanager.hpp  symbolfactory.hpp  types.hpp  xmlsymbol.hpp
Client/Native/Application/Source/: Message-Encoder-Decoder.cpp  consolemanager.cpp  filemanager.cpp  main.cpp  menu.cpp  statemanager.cpp  symbolfactory.cpp  xmlsymbol.cpp
Client/Native/Common/: CMakeLists.txt
Client/Native/Common/Include/: enum.hpp
Client/Native/Common/Source/: enum.cpp
Client/Native/Encoders/: CMakeLists.txt
Client/Native/Encoders/Include/: base64.hpp  caesarsp.h  coder.hpp
Client/Native/Encoders/Source/: base64.cpp  caesarsp.c  caesarsp.cpp  coder.cpp
Client/Native/Scripts/: compile-windows.sh
Debug/: Message-Encoder-Decoder.ilk  Message-Encoder-Decoder.res  vc142.idb
Debug/Message-.E2353D39.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Message-Encoder-Decoder.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
Deploy/Server/Docker/: .env  docker-compose.yml
Encoders/: CMakeLists.txt
Encoders/Include/: base64.h  caesarsp.h  coder.h
Encoders/Source/: CMakeLists.txt  base64.cpp  caesarsp.cpp  coder.cpp
Headers/: Base64.h  Menu.h  base64.h  caesarsp.h  coder.h  menu.h
Scripts/: compile-linux.sh  compile-windows.sh
Server/message-encoder-decoder/: build.gradle  settings.gradle
Server/message-encoder-decoder/gradle/wrapper/: gradle-wrapper.properties
Server/message-encoder-decoder/openapi/: OpenAPI-MessageEncoderDecoder.json
Server/message-encoder-decoder/src/main/resources/: application.properties  (+1 more)
Source/: Base64.cpp  Coder.cpp  Menu.cpp  Message-Encoder-Decoder.cpp  base64.cpp  caesarsp.cpp  coder.cpp  menu.cpp
Tools/Scripts/: lib.sh
(+17 files in other folders)
